--- a/requirements.txt
+++ b/requirements.txt
@@ -1,153 +1,28 @@
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.9.0
-appdirs==1.4.4
-attrs==25.3.0
-beautifulsoup4==4.13.3
-bleach==6.2.0
-blinker==1.9.0
-Brotli==1.1.0
-cachetools==5.5.2
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.1
-cssselect2==0.8.0
-cycler==0.12.1
-defusedxml==0.7.1
-distro==1.9.0
-docopt==0.6.2
-dotenv==0.9.9
-entrypoints==0.4
-et_xmlfile==2.0.0
-Faker==37.1.0
-fastapi==0.115.11
-fastjsonschema==2.21.1
-favicon==0.7.0
+attr==0.3.2
+ConfigParser==7.2.0
+contextlib2==21.6.0
+cryptography==44.0.3
+docutils==0.21.2
 filelock==3.18.0
-fonttools==4.56.0
 fpdf==1.7.2
-fsspec==2025.3.2
-gitdb==4.0.12
-GitPython==3.1.44
-graphviz==0.20.3
-greenlet==3.1.1
-h11==0.14.0
-htbuilder==0.9.0
-httpcore==1.0.7
-httpx==0.28.1
-idna==3.10
-importlib_metadata==8.6.1
-iniconfig==2.1.0
+HTMLParser==0.0.2
+importlib_metadata==8.6.1 # Resolved: Kept this version, removed 8.0.0
+ipython==9.2.0
+ipywidgets==8.1.7
 Jinja2==3.1.6
-jiter==0.9.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-kiwisolver==1.4.8
-lunar_python==1.4.1
-lxml==5.3.2
-Markdown==3.7
-markdownlit==0.0.7
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-mistune==3.1.3
-mpmath==1.3.0
-narwhals==1.31.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-networkx==3.4.2
-notebook-as-pdf==0.5.0
-numpy==2.1.1
-openai==1.66.3
-opencv-python==4.11.0.86
+# jnius==1.1.0 # Removed as it may not be needed and causes build issues without Cython/JDK
+keyring==25.6.0
+mock==5.2.0
 openpyxl==3.1.5
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-pillow==11.1.0
-pipreqs==0.4.13
-platformdirs==4.3.7
-plotly==6.0.1
-pluggy==1.5.0
-prometheus_client==0.21.1
-protobuf==5.29.3
-psutil==7.0.0
-py-cpuinfo==9.0.0
-pyarrow==19.0.1
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydeck==0.9.1
-pydyf==0.11.0
-pyee==11.1.1
-Pygments==2.19.1
-pymdown-extensions==10.14.3
-pyparsing==3.2.2
+Pillow==11.2.1
+protobuf==5.29.3 # Corrected to be compatible with Streamlit (<6 and >=3.20)
+pyOpenSSL==25.0.0
 pypdf==5.4.0
-PyPDF2==3.0.1
-pyphen==0.17.2
-pyppeteer==2.0.0
-pytest==8.3.5
-pytest-asyncio==0.26.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2025.1
-pywin32==310
-PyYAML==6.0.2
-pyzmq==26.3.0
-referencing==0.36.2
-requests==2.32.3
-rpds-py==0.23.1
-scipy==1.15.2
-seaborn==0.13.2
-setuptools==78.1.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.40
-st-annotated-text==4.0.2
-st-theme==1.2.3
-starlette==0.46.1
+railroad==0.5.0
+redis==6.0.0
+Sphinx==8.2.3
 streamlit==1.43.2
-streamlit-avatar==0.1.3
-streamlit-camera-input-live==0.2.0
-streamlit-card==1.0.2
-streamlit-embedcode==0.1.2
-streamlit-extras==0.6.0
-streamlit-faker==0.0.3
-streamlit-image-coordinates==0.1.9
-streamlit-keyup==0.3.0
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==2.5.5
-sympy==1.13.1
-tenacity==9.0.0
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-toml==0.10.2
-torch==2.6.0
-torchvision==0.21.0
+thread==2.0.5
 tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2025.1
-ultralytics==8.3.105
-ultralytics-thop==2.0.14
-urllib3==1.26.20
-uvicorn==0.34.0
-validators==0.34.0
-watchdog==6.0.0
-weasyprint==65.1
-webencodings==0.5.1
-websockets==10.4
-XlsxWriter==3.2.2
-yarg==0.1.10
-zipp==3.21.0
-zopfli==0.2.3.post1
+urllib3_secure_extra==0.1.0
+# xmlrpclib==1.0.1 # Removed as it's a Python 2 module, use xmlrpc.client in Python 3
